--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="name_input_label_text">Nama Lengkap</string>
     <string name="register_button_text">Daftar</string>
     <string name="back_to_login_btn_text">Sudah punya akun?</string>
+    <string name="story_image_alt">Story Image</string>
 </resources>
