--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,13 @@
     <string name="name_input_label_text">Nama Lengkap</string>
     <string name="register_button_text">Daftar</string>
     <string name="back_to_login_btn_text">Sudah punya akun?</string>
-    <string name="story_image_alt">Story Image</string>
     <string name="menu_logout">Logout</string>
     <string name="menu_settings">Settings</string>
+
+    <!--Story List Page-->
+    <string name="story_image_alt">Story Image</string>
+
+    <!--Story Detail Page-->
+    <string name="story_detail_image_alt">Story Image</string>
+    <string name="created_at_text">Created at %s</string>
 </resources>
