--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,12 @@
     <string name="story_detail_image_alt">Story Image</string>
     <string name="created_at_text">Created at %s</string>
     <string name="add_story_fab_alt">Add Story Floating Button</string>
+
+    <!--Story Upload Page-->
+    <string name="camera_x">CameraX</string>
+    <string name="camera">Kamera</string>
+    <string name="gallery">Galeri</string>
+    <string name="upload">Unggah</string>
+    <string name="preview_image">Preview Image</string>
+    <string name="story_description_layout">Description</string>
 </resources>
