--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,27 +4,25 @@
     <string name="app_logo_alt">app_logo</string>
 
     <!--Login Page-->
-    <string name="title_login_page">Masuk</string>
-    <string name="desc_login_page">Masuk terlebih dahulu sebelum menggunakan Story App™</string>
+    <string name="title_login_page">Login</string>
+    <string name="desc_login_page">Login first before using Story App™</string>
     <string name="login_asset_alt">Login Image</string>
-    <string name="password_input_label_text">Kata Sandi</string>
+    <string name="password_input_label_text">Password</string>
     <string name="email_input_label_text">Email</string>
-    <string name="login_button_text">Masuk</string>
-    <string name="edit_text_password_error_msg">Kata Sandi tidak boleh kurang dari 6 karakter</string>
-    <string name="edit_text_email_error_msg">Email tidak valid</string>
-    <string name="register_first_button_text">Mendaftar Terlebih Dahulu</string>
+    <string name="login_button_text">Login</string>
+    <string name="edit_text_password_error_msg">Password should be 6 characters minimum.</string>
+    <string name="edit_text_email_error_msg">Invalid email</string>
+    <string name="register_first_button_text">Register first</string>
     <string name="toast_login_success">User successfully logged in!</string>
     <string name="toast_login_failed">Error when logging in user!</string>
 
     <!--Register Page-->
-    <string name="title_register_page">Buat Akun</string>
-    <string name="desc_register_page">Mendaftar terlebih dahulu sebelum menggunakan Story App™</string>
+    <string name="title_register_page">Register</string>
+    <string name="desc_register_page">Register first before using Story App™</string>
     <string name="register_asset_alt">Register Image</string>
-    <string name="name_input_label_text">Nama Lengkap</string>
-    <string name="register_button_text">Daftar</string>
-    <string name="back_to_login_btn_text">Sudah punya akun?</string>
-    <string name="menu_logout">Keluar</string>
-    <string name="menu_settings">Pengaturan</string>
+    <string name="name_input_label_text">Full Name</string>
+    <string name="register_button_text">Register</string>
+    <string name="back_to_login_btn_text">Already have an account?</string>
     <string name="toast_register_success">User successfully registered!</string>
     <string name="toast_register_failed">Error when registering user!</string>
 
@@ -32,20 +30,22 @@
     <string name="story_image_alt">Gambar Story</string>
     <string name="toast_story_load_empty">Hmm… Apparently there\'s no new uploaded story today</string>
     <string name="toast_story_load_failed">Oops! error on loading stories</string>
+    <string name="menu_logout">Logout</string>
+    <string name="menu_settings">Settings</string>
 
     <!--Story Detail Page-->
-    <string name="story_detail_image_alt">Gambar Story</string>
-    <string name="created_at_text">Dibuat pada %s</string>
+    <string name="story_detail_image_alt">Story Image</string>
+    <string name="created_at_text">Created at %s</string>
     <string name="add_story_fab_alt">Add Story Floating Button</string>
 
     <!--Story Upload Page-->
-    <string name="camera">Kamera</string>
-    <string name="gallery">Galeri</string>
-    <string name="upload">Unggah</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="upload">Upload</string>
     <string name="preview_image">Preview Image</string>
     <string name="story_description_layout">Description</string>
     <string name="toast_story_upload_success">Story successfully uploaded!</string>
     <string name="toast_story_upload_failed">Error when uploading story</string>
     <string name="toast_story_upload_image_required">Image is required</string>
-    <string name="toast_story_upload_no_permission">Tidak mendapatkan permission.</string>
+    <string name="toast_story_upload_no_permission">Failed to get permission.</string>
 </resources>
