--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -44,6 +44,7 @@
     <string name="upload">Upload</string>
     <string name="preview_image">Preview Image</string>
     <string name="story_description_layout">Description</string>
+    <string name="story_description_layout_required">Description is required</string>
     <string name="toast_story_upload_success">Story successfully uploaded!</string>
     <string name="toast_story_upload_failed">Error when uploading story</string>
     <string name="toast_story_upload_image_required">Image is required</string>
