--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -23,8 +23,6 @@
     <string name="name_input_label_text">Nama Lengkap</string>
     <string name="register_button_text">Daftar</string>
     <string name="back_to_login_btn_text">Sudah punya akun?</string>
-    <string name="menu_logout">Keluar</string>
-    <string name="menu_settings">Pengaturan</string>
     <string name="toast_register_success">Kamu berhasil mendaftar!</string>
     <string name="toast_register_failed">Terdapat kesalahan ketika berupaya mendaftar!</string>
 
@@ -32,6 +30,9 @@
     <string name="story_image_alt">Gambar Story</string>
     <string name="toast_story_load_empty">Hmm… Sepertinya belum ada Story baru hari ini</string>
     <string name="toast_story_load_failed">Ups! Terjadi kesalahan dalam memuat Story</string>
+    <string name="menu_logout">Keluar</string>
+    <string name="menu_maps">Peta</string>
+    <string name="menu_settings">Pengaturan</string>
 
     <!--Story Detail Page-->
     <string name="story_detail_image_alt">Gambar Story</string>
@@ -49,4 +50,7 @@
     <string name="toast_story_upload_failed">Terjadi kesalahan ketika mengunggah Story!</string>
     <string name="toast_story_upload_image_required">Tambahkan gambar terlebih dahulu</string>
     <string name="toast_story_upload_no_permission">Gagal mendapatkan permission.</string>
+
+    <!--Story Map Page-->
+    <string name="title_activity_story_map">Peta Unggahan Story</string>
 </resources>
